[package]
name = "sefy"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
hex = "0.4"
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["default", "all_loaders"] }
getrandom = "0.2"
rfd = "0.14"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
image = { version = "0.25", features = ["jpeg", "png"] }